@@ -1,3 +1,9 @@
+2019-07-19  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/91211
+	* tree-ssa-sccvn.c (vn_walk_cb_data::push_partial_def): Fix
+	memset encoding size.
+
 2019-07-19  Uroš Bizjak  <ubizjak@gmail.com>
 
 	PR target/91204
